--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Structured information collection about all kinds of topics in the field of accessibility ",
   "main": "index.js",
   "dependencies": {
+    "jquery": "^3.4.1",
+    "loglevel": "^1.6.6",
+    "objectmodel": "^4.0.5",
+    "pouchdb": "^7.1.1",
+    "pouchdb-authentication": "^1.1.3",
+    "pouchdb-find": "^7.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3"
   },
