--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Structured information collection about all kinds of topics in the field of accessibility ",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "loglevel": "^1.6.6",
     "mini.css": "^3.0.1",
+    "morgan": "^1.9.1",
+    "node-couchdb": "^1.3.0",
     "objectmodel": "^4.0.5",
     "pouchdb": "^7.1.1",
     "pouchdb-authentication": "^1.1.3",
@@ -15,26 +18,28 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "webpack": "^4.41.4",
-    "webpack-dev-server": "^3.10.0",
-    "webpack-cli": "^3.3.10",
-    "babel-cli": "^6.26.0",
     "@babel/core": "^7.7.7",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.4.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.2",
     "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.js --env.production",
-    "release": ""
+    "release": "",
+    "start-rest-dev": "node rest/restApi.mjs",
+    "start-rest-prod": "node rest/restApi.mjs prod"
   },
   "repository": {
     "type": "git",
