--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Structured information collection about all kinds of topics in the field of accessibility ",
   "main": "index.js",
   "dependencies": {
+    "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "loglevel": "^1.6.6",
@@ -18,12 +19,12 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-preset-env": "^1.7.0",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^3.4.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
