--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "core-js": "^3.6.4",
+    "regenerator-runtime": "^0.13.3",
     "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "loglevel": "^1.6.6",
