--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "webpack-dev-server": "^3.10.0"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --config webpack.config.js --env.production",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --config webpack.config.js --env.production",
     "release": "",
     "start-rest-dev": "node rest/restApi.mjs",
     "start-rest-prod": "node rest/restApi.mjs prod"
